[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "matplotlib>=3.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
